<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="restart">restart</string>
    <string name="class1">Class 1</string>
    <string name="class2">Class 2</string>
    <string name="class3">Class 3</string>
    <string name="class4">Class 4</string>
    <string name="class5">Class 5</string>
    <string name="home">Home</string>
    <string name="add">add</string>
    <string name="substract">substract</string>
    <string name="multiply">multiply</string>
    <string name="divide">divide</string>
    <string name="result_hint">operation result</string>
    <string name="calculate">Calculate</string>
    <string name="reset">reset</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="enterValues">Enter Values</string>
    <string name="seconds">Time in milliseconds</string>
    <string name="service">Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="get_random">Get Random Number</string>
    <string name="value">Value:</string>
    <string name="iteration">Iteration:</string>
</resources>
