<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class4">

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iteration"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_intentService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_service" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iteration"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textIntentService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_getRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_random" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textGetRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>