<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#499C54"
    android:backgroundTint="#040922"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonRestart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/subtract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCounter"
        app:layout_constraintVertical_bias="0.47"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="21dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>