<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewCounter2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"

                        android:background="@drawable/button_rounded"
                        android:gravity="center"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="80sp"
                        android:textStyle="bold"
                        app:layout_constrainedHeight="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/buttonReset"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/reset"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/buttonPlay"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/play"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/buttonStop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stop"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/timeIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>